--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(GGJ)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp Sources/Curve.cpp Sources/Player.cpp)
+set(SOURCE_FILES main.cpp
+        Sources/Curve.cpp
+        Sources/Player.cpp
+        Sources/Timer.cpp)
 add_executable(GGJ ${SOURCE_FILES})
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
